fix: add class to section add new item with proper style to align with the initial UI

--- a/style.css
+++ b/style.css
@@ -74,6 +74,10 @@ button {
 }
 
 /* Heading */
+.add-items {
+  padding: 16px 0;
+}
+
 .section-actions-title,
 .add-item-title {
   color: #333;
